--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -18,22 +18,13 @@
 	<!--change this to serve from gh pages -->
 	<link rel="shortcut icon" href="https://p2pu.org/static/images/favicon.ico">
 	<link rel="apple-touch-icon" href="https://p2pu.org/static/images/apple-touch-icon.png">
+	<link rel="stylesheet" href="{{ site.baseurl }}/css/p2pustrap.min.css" />
+	<link rel="stylesheet" href="{{ site.baseurl }}/css/course-styles.css" />
 
-	<link href="//netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css"
-	      rel="stylesheet">
-	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
-	<noscript>
-		<link rel="stylesheet" href="{{ site.baseurl }}/css/style-noscript.css" />
-	</noscript>
-	<link rel="stylesheet" href="{{ site.baseurl }}/css/style.css" />
-
-
-	<link rel="stylesheet" href="{{site.baseurl}}/css/site.css">
-	<!--[if lte IE 8]><link rel="stylesheet" href="{{site.baseurl}}/css/ie/v8.css" /><![endif]-->
-	<!--[if lte IE 9]><link rel="stylesheet" href="{{site.baseurl}}/css/ie/v9.css" /><![endif]-->
 	<script type="text/javascript" src="{{ site.baseurl }}/js/modernizr-2.6.2.min.js"></script>
 </head>
-<body {% if page.itemtype %}itemscope itemtype="{{ page.itemtype }}"{% endif %} class="{{ page.body-class }}">
+<body {% if page.itemtype %}itemscope itemtype="{{ page.itemtype }}"{% endif %}
+      class="{{ page.body-class }}">
 
 {% include navigation.html %}
 
@@ -41,8 +32,14 @@
 
 {% include footer.html %}
 
-<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-<script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+<script>window.jQuery || document.write('<script src="{{ site.baseurl }}/js/jquery.min.js"><\/script>')</script>
+<script src="http://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.2.0/js/bootstrap.js"></script>
+<script type="text/javascript" src="http://rawgithub.com/p2pu/p2pu_navigation_widget/master/p2pu_menu_slider.js"></script>
+<script src="{{ site.baseurl }}/js/page-init.js"></script>
+<script>
+	W4C.Splash.init();
+</script>
 
 <!-- Google Analytics -->
 {% if site.ga_tracking_code %}
