--- a/css/scss/course-style.scss
+++ b/css/scss/course-style.scss
@@ -1,5 +1,9 @@
 // Variables:
 $grid-float-breakpoint: 992px;
+.navbar {
+	position: relative;
+	z-index: 10;
+}
 
 .bs-docs-sidebar {
 	.nav {
@@ -78,10 +82,10 @@ $grid-float-breakpoint: 992px;
 	position: relative;
 	margin-top: -60px;
 
-	a{
+	a {
 		color: #ffffff;
 		border-bottom: dotted 1px;
-		&:hover, &:focus{
+		&:hover, &:focus {
 			text-decoration: none;
 			border-bottom-color: transparent;
 		}
