making minor styling changes

--- a/css/scss/course-style.scss
+++ b/css/scss/course-style.scss
@@ -81,6 +81,7 @@ $grid-float-breakpoint: 992px;
 	text-align: center;
 	position: relative;
 	margin-top: -60px;
+	margin-bottom: 4em;
 
 	a {
 		color: #ffffff;
@@ -206,8 +207,8 @@ $grid-float-breakpoint: 992px;
 	color: #fff;
 	text-align: center;
 	padding: 6em 0 6em 0;
-	position: relative;
 	margin: 4em 0;
+
 }
 
 #promo-til {
