--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -44,7 +44,7 @@
 				{% endfor %}
 				<li>
 					<a target="_blank"
-					   href="http://community.p2pu.org/t/using-github-pages-for-open-online-learning-feedback-request/748">Discussion</a>
+					   href="http://discourse.p2pu.org/category/writing-for-change">Discussion</a>
 				</li>
 				<!--li>
 					<a href="http://thepeople.p2pu.org" class="btn btn-primary">Sign Up</a>
