--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -51,7 +51,7 @@
 				</li-->
 			</ul>
 			<ul class="nav navbar-nav navbar-right">
-				<li><a target="_blank" href="https://github.com/p2pu/writing-for-change">Github</a></li>
+				<li><a target="_blank" href="https://github.com/p2pu/writing-for-change">Fork on Github</a></li>
 			</ul>
 		</div>
 		<!-- /.navbar-collapse -->
