--- a/_includes/signup.html
+++ b/_includes/signup.html
@@ -1,4 +1,4 @@
-<form role="form" id="id-form-signup" action="" method="POST">
+<form role="form" id="id-form-signup" action="http://w4c.herokuapp.com/api/signup/" method="POST">
   <div class="form-group">
     <label for="name-input">Name</label>
     <input type="text" class="form-control" name="name" id="name-input" placeholder="What should we call you?">
@@ -9,9 +9,3 @@
   </div>
   <button type="submit" class="btn btn-default">Sign Up</button>
 </form>
-
-<!--script type="text/javascript">
- $(document).ready(function(){
-   alert('boo');
- });
-</script-->
