--- a/_includes/signup.html
+++ b/_includes/signup.html
@@ -1,3 +1,7 @@
+<h2>Signup is Open Now: We Start August 15!</h2>
+
+<p></p>
+
 <form role="form" id="id-form-signup" action="http://w4c.herokuapp.com/api/signup/" method="POST">
   <div class="form-group">
     <label for="name-input">Name</label>
@@ -5,7 +9,7 @@
   </div>
   <div class="form-group">
     <label for="email-input">Email address</label>
-    <input type="email" class="form-control" name="email" id="email-input" placeholder="Where should we mail you?">
+    <input type="email" class="form-control" name="email" id="email-input" placeholder="Where should we send you very important messages?">
   </div>
   <button type="submit" class="btn btn-default">Sign Up</button>
 </form>
