--- a/css/scss/course-style.scss
+++ b/css/scss/course-style.scss
@@ -1,6 +1,12 @@
 // Variables:
 $grid-float-breakpoint: 992px;
 $screen-sm: 768px;
+
+//base
+.first {
+	padding-left: 0;
+}
+
 .navbar {
 	position: relative;
 	z-index: 10;
@@ -12,7 +18,7 @@ $screen-sm: 768px;
 			display: none;
 			padding-bottom: 10px;
 		}
-		& >.active > ul {
+		& > .active > ul {
 			display: block;
 		}
 	}
@@ -118,7 +124,7 @@ $screen-sm: 768px;
 		padding: 0;
 		text-align: center;
 		@media (min-width: $screen-sm) {
-				padding: 4.5em 0;
+			padding: 4.5em 0;
 		}
 
 		header {
@@ -248,4 +254,14 @@ $screen-sm: 768px;
 	border-color: rgba(255, 255, 255, 0);
 	color: #27636B;
 	font-size: 1.25em;
+}
+
+.badges-wrapper{
+	img{
+		width: 250px;
+	}
+}
+.collaborators{
+
+	font-size: 16px;
 }
