--- a/_layouts/course_page.html
+++ b/_layouts/course_page.html
@@ -7,10 +7,11 @@ layout: base
 		<nav class="bs-docs-sidebar">
 			<ul class="nav nav-pills nav-stacked hidden-print hidden-xs hidden-sm">
 				{% for module in site.data.course.modules %}
-					<li {% if page.url contains module %}class="active"{% endif %}>
-						<a href="{{ site.baseurl }}{{ site.categories[module][2].url }}">{{ module }}</a>
+					{% assign mod_name = module|downcase|replace:' ','' %}
+					<li {% if page.url contains mod_name %}class="active"{% endif %}>
+						<a href="{{ site.baseurl }}{{ site.categories[mod_name][2].url }}">{{ module }}</a>
 						<ul class="nav">
-							{% for post in site.categories[module] reversed %}
+							{% for post in site.categories[mod_name] reversed %}
 								<li {% if post.url == page.url %}class="active"{% endif %}>
 									<a href="{{ site.baseurl }}{{ post.url }}">
 										{{ post.title }}
