--- a/css/scss/course-style.scss
+++ b/css/scss/course-style.scss
@@ -22,7 +22,7 @@ img {
 			display: none;
 			padding-bottom: 10px;
 
-			li > a{
+			li > a {
 				padding: 10px 10px 10px 30px;
 			}
 
@@ -230,7 +230,7 @@ img {
 	color: #fff;
 	text-align: center;
 	padding: 0;
-	margin: 4em 0;
+	margin-bottom: 4em;
 	@media (min-width: $screen-sm) {
 		padding: 6em 0;
 	}
@@ -270,14 +270,18 @@ img {
 }
 
 .badges-wrapper {
+	background-color: #FFBC1A;
+	padding-bottom: 4em;
+	color:  #ffffff;
+
 	img {
 		width: 250px;
 	}
-}
 
-.collaborators {
-
-	font-size: 16px;
+	.thumbnail{
+		background-color: transparent;
+		border: none;
+	}
 }
 
 .pager {
