adding signup link to navigation

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -8,6 +8,8 @@
 			<li><a target="_blank" href="https://twitter.com/p2pu"><i class="fa fa-twitter"></i></a>
 			</li>
 			<li><a target="_blank" href="https://www.facebook.com/P2PUniversity"><i class="fa fa-facebook"></i></a></li>
+			<li><a target="_blank" href="https://github.com/p2pu/writing-for-change">
+				<i class="fa fa-github"></i></a></li>
 		</ul>
 
 		<hr>
