--- a/_includes/signup.html
+++ b/_includes/signup.html
@@ -9,3 +9,5 @@
   </div>
   <button type="submit" class="btn btn-default">Sign Up</button>
 </form>
+<br/>
+<p id="signup-form-error" class="alert alert-danger hidden" role="alert">Something went wrong!! But don't worry, wait a while and try again. If you keep getting this error, please tell us <a href="http://discourse.p2pu.org/categories/writing-for-change/">on the forum.</a></p>
