--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -19,7 +19,7 @@
 	<link rel="shortcut icon" href="https://p2pu.org/static/images/favicon.ico">
 	<link rel="apple-touch-icon" href="https://p2pu.org/static/images/apple-touch-icon.png">
 	<link rel="stylesheet" href="{{ site.baseurl }}/css/p2pustrap.min.css" />
-	<link rel="stylesheet" href="{{ site.baseurl }}/css/course-styles.css" />
+	<link rel="stylesheet" href="{{ site.baseurl }}/css/course-style.css" />
 
 	<script type="text/javascript" src="{{ site.baseurl }}/js/modernizr-2.6.2.min.js"></script>
 </head>
