--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -25,13 +25,15 @@
 				</li>
 				{% for module in site.data.course.modules %}
 					<li class="{% if page.url contains module %}active{% endif %} dropdown hidden-print hidden-md hidden-lg">
-						<a href="{{ site.categories[module][2].url }}">
+					{% assign mod_name = module|split:":" %}
+					{% assign mod_name = mod_name[0]|downcase|replace:' ','' %}
+						<a href="{{ site.categories[mod_name][2].url }}">
 							{{ module }}
 						</a>
 						<span class="fa fa-caret-down dropdown-toggle visible-xs-block visible-sm-block"
 						      data-toggle="dropdown"></span>
 						<ul class="dropdown-menu">
-							{% for post in site.categories[module] reversed %}
+							{% for post in site.categories[mod_name] reversed %}
 								<li>
 									<a {% if post.url == page.url %}class="active"{% endif %}
 									   href="{{ site.baseurl }}{{ post.url }}">
@@ -46,9 +48,6 @@
 					<a target="_blank"
 					   href="http://discourse.p2pu.org/category/writing-for-change">Discussion</a>
 				</li>
-				<!--li>
-					<a href="http://thepeople.p2pu.org" class="btn btn-primary">Sign Up</a>
-				</li-->
 			</ul>
 			<ul class="nav navbar-nav navbar-right">
 				<li><a href="{{ '/signup' | prepend: site.baseurl }}">Signup</a></li>
