changing landing for better conversion

--- a/_includes/signup.html
+++ b/_includes/signup.html
@@ -5,9 +5,9 @@
   </div>
   <div class="form-group">
     <label for="email-input">Email address</label>
-    <input type="email" class="form-control" name="email" id="email-input" placeholder="Where should we send you very important messages?">
+    <input type="email" class="form-control" name="email" id="email-input" placeholder="Where should we send you messages?">
   </div>
-  <button type="submit" class="btn btn-default">Sign Up</button>
+  <button type="submit" class="btn btn-success btn-signup">Sign Up</button>
 </form>
 <br/>
 <p id="signup-form-error" class="alert alert-danger hidden" role="alert">Something went wrong!! But don't worry, wait a while and try again. If you keep getting this error, please tell us <a href="http://discourse.p2pu.org/categories/writing-for-change/">on the forum.</a></p>
