--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -18,10 +18,10 @@
 		<div class="collapse navbar-collapse" id="p2pu-menu">
 			<ul class="nav navbar-nav navbar-right">
 				<li class="{% if page.url == post.url %}active{% endif %}">
-					<a href="{{ site.baseurl }}{% post_url 2000-01-01-start-here %}">Start here</a>
+					<a href="{{ site.baseurl }}/start/start-here/">Start here</a>
 				</li>
 				<li {% if page.url contains module %}class="active"{% endif %}>
-					<a href="{{ site.baseurl }}{% post_url 1999-01-01-Check-in %}">Content</a>
+					<a href="{{ site.baseurl }}/module1/check-in/">Content</a>
 				</li>
 				{% for module in site.data.course.modules %}
 					<li class="{% if page.url contains module %}active{% endif %} dropdown hidden-print hidden-md hidden-lg">
