--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -21,7 +21,7 @@
 					<a href="{{ site.baseurl }}/start/start-here/">Start here</a>
 				</li>
 				<li {% if page.url contains module %}class="active"{% endif %}>
-					<a href="{{ site.baseurl }}/module1/check-in/">Content</a>
+					<a href="{{ site.baseurl }}/module1/Check-In/">Content</a>
 				</li>
 				{% for module in site.data.course.modules %}
 					<li class="{% if page.url contains module %}active{% endif %} dropdown hidden-print hidden-md hidden-lg">
