--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -48,7 +48,7 @@
 		<div class="collapse navbar-collapse" id="p2pu-menu">
 			<ul class="nav navbar-nav navbar-right">
 				<li class="{% if page.url == post.url %}active{% endif %}">
-					<a href="{{ site.baseurl }}/start/start-here/ %}">Start here</a>
+					<a href="{{ site.baseurl }}/start/start-here/">Start here</a>
 				</li>
 				<li {% if page.url contains module %}class="active"{% endif %}>
 					<a href="{{ site.baseurl }}/module1/Check-In/">Content</a>
